SERVER-42756 $multiply operator may return with or w/o an error depending on whether pipeline optimisation is enabled